Added a leaderboard function. Began work with the local storage. Wrote all of the quiz questions.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="initial-container">
-        <h1>Welcome To Erik's Coding Quiz</h1>
+        <h1 id = "h1">Welcome To Erik's Coding Quiz</h1>
         <p>You've made it to my coding quiz! Congratulations, you are potentially the only person who will see this... what an honor!<br>
         <br>
         Once the game begins, you will be presented with a series of questions.<br>
